--- a/Task4/apz-pzpi-21-1-boichenko-matvii-task3/package.json
+++ b/Task4/apz-pzpi-21-1-boichenko-matvii-task3/package.json
@@ -11,12 +11,22 @@
     "openapi-ts": "npx @hey-api/openapi-ts -i ./openapi.json -o ./src/api/client -c axios"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.2",
+    "framer-motion": "^11.2.10",
+    "i18next": "^23.11.5",
+    "immer": "^10.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
+    "react-router-dom": "^6.23.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.46.3",
+    "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
