--- a/Task4/apz-pzpi-21-1-boichenko-matvii-task3/package.json
+++ b/Task4/apz-pzpi-21-1-boichenko-matvii-task3/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@tanstack/react-query": "^5.44.0",
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
