--- a/.github/workflows/delete-azure-resources.yml
+++ b/.github/workflows/delete-azure-resources.yml
@@ -8,9 +8,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Azure CLI Login
         uses: azure/login@v1
         with:
@@ -18,5 +15,4 @@ jobs:
 
       - name: Delete Azure Resources
         run: |
-          # Add your Azure resource deletion command here
-          az group delete --name myResourceGroup --yes --no-wait
+          az group delete --name ${{ secrets.RESOURCE_GROUP }} --yes --no-wait
