--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Archive build files
         run: |
           cd Task4/apz-pzpi-21-1-boichenko-matvii-task4
-          zip -r build.zip build/
+          zip -r build.zip dist/
 
       - name: Deploy to Azure
         run: |
