--- a/.github/workflows/create-azure-resources.yml
+++ b/.github/workflows/create-azure-resources.yml
@@ -7,6 +7,19 @@ jobs:
   create-resources:
     runs-on: ubuntu-latest
 
+    env:
+      RESOURCE_GROUP: myResourceGroup
+      CONTAINER_REGISTRY: myContainerRegistry
+      APP_SERVICE_PLAN: myAppServicePlan
+      WEB_APP_BACKEND: myBackendWebApp
+      STATIC_WEB_APP: myStaticWebApp
+      DB_SERVER: myDbServer
+      DATABASE_USER: postgres
+      DATABASE_PASSWORD: 1qaz2wsx
+      DATABASE_PORT: 5432
+      DATABASE_NAME: postgres
+      DATABASE_SCHEMA: medmobile
+
     steps:
       - name: Azure CLI Login
         uses: azure/login@v1
@@ -15,32 +28,40 @@ jobs:
 
       - name: Create Resource Group
         run: |
-          az group create --name ${{ secrets.RESOURCE_GROUP }} --location eastus
+          az group create --name $RESOURCE_GROUP --location eastus
 
       - name: Create Azure Container Registry
         run: |
-          az acr create --resource-group ${{ secrets.RESOURCE_GROUP }} --name ${{ secrets.CONTAINER_REGISTRY }} --sku Basic --admin-enabled true
+          az acr create --resource-group $RESOURCE_GROUP --name $CONTAINER_REGISTRY --sku Basic --admin-enabled true
 
       - name: Get ACR Admin Credentials
         id: get-acr-creds
         run: |
-          echo "ACR_USERNAME=$(az acr credential show -n ${{ secrets.CONTAINER_REGISTRY }} --query 'username' -o tsv)" >> $GITHUB_ENV
-          echo "ACR_PASSWORD=$(az acr credential show -n ${{ secrets.CONTAINER_REGISTRY }} --query 'passwords[0].value' -o tsv)" >> $GITHUB_ENV
+          echo "ACR_USERNAME=$(az acr credential show -n $CONTAINER_REGISTRY --query 'username' -o tsv)" >> $GITHUB_ENV
+          echo "ACR_PASSWORD=$(az acr credential show -n $CONTAINER_REGISTRY --query 'passwords[0].value' -o tsv)" >> $GITHUB_ENV
 
-      - name: Retry App Service Plan Creation
+      - name: Create App Service Plan
         run: |
-          for i in {1..3}; do
-            az appservice plan create --name ${{ secrets.APP_SERVICE_PLAN }} --resource-group ${{ secrets.RESOURCE_GROUP }} --sku B1 --is-linux && break || sleep 60;
-          done
+          az appservice plan create --name $APP_SERVICE_PLAN --resource-group $RESOURCE_GROUP --sku B1 --is-linux
+
+      - name: Create PostgreSQL Database
+        run: |
+          az postgres flexible-server create --resource-group $RESOURCE_GROUP --name $DB_SERVER --admin-user $DATABASE_USER --admin-password $DATABASE_PASSWORD --sku-name B_Standard_B1ms --version 13
+
+      - name: Configure PostgreSQL Firewall
+        run: |
+          az postgres flexible-server firewall-rule create --resource-group $RESOURCE_GROUP --name $DB_SERVER --rule-name AllowAllAzureIps --start-ip-address 0.0.0.0 --end-ip-address 255.255.255.255
 
       - name: Retry Backend Web App Creation
         run: |
           for i in {1..3}; do
-            az webapp create --resource-group ${{ secrets.RESOURCE_GROUP }} --plan ${{ secrets.APP_SERVICE_PLAN }} --name ${{ secrets.WEB_APP_BACKEND }} --deployment-container-image-name ${{ secrets.CONTAINER_REGISTRY }}.azurecr.io/fastapi-backend:latest && break || sleep 60;
+            az webapp create --resource-group $RESOURCE_GROUP --plan $APP_SERVICE_PLAN --name $WEB_APP_BACKEND --deployment-container-image-name $CONTAINER_REGISTRY.azurecr.io/fastapi-backend:latest && break || sleep 60;
           done
 
-      - name: Retry Frontend Web App Creation
+      - name: Set Backend Web App Environment Variables
         run: |
-          for i in {1..3}; do
-            az webapp create --resource-group ${{ secrets.RESOURCE_GROUP }} --plan ${{ secrets.APP_SERVICE_PLAN }} --name ${{ secrets.WEB_APP_FRONTEND }} --runtime "NODE:20-lts" && break || sleep 60;
-          done
+          az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WEB_APP_BACKEND --settings DATABASE_USER=$DATABASE_USER DATABASE_PASSWORD=$DATABASE_PASSWORD DATABASE_HOST=$DB_SERVER.postgres.database.azure.com DATABASE_PORT=$DATABASE_PORT DATABASE_NAME=$DATABASE_NAME DATABASE_SCHEMA=$DATABASE_SCHEMA
+
+      - name: Create Azure Static Web App for Frontend
+        run: |
+          az staticwebapp create --resource-group $RESOURCE_GROUP --name $STATIC_WEB_APP --location EastUS --branch main --source ./Task4/apz-pzpi-21-1-boichenko-matvii-task4 --output-location "build"
