--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -11,10 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      RESOURCE_GROUP: myResourceGroup
-      STATIC_WEB_APP: myStaticWebApp
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      AZURE_STATIC_WEB_APPS_API_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+      RESOURCE_GROUP: matvii-nure-resources
+      STATIC_WEB_APP: matvi-nure-react
 
     steps:
       - name: Checkout code
@@ -38,7 +36,7 @@ jobs:
       - name: Archive build files
         run: |
           cd Task4/apz-pzpi-21-1-boichenko-matvii-task4
-          zip -r build.zip build/
+          zip -r build.zip dist/
 
       - name: Deploy to Azure Static Web App
         run: |
