--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '20'
 
       - name: Install dependencies
         run: |
@@ -31,13 +31,11 @@ jobs:
       - name: Build frontend
         run: |
           ls
-          cd Task4/apz-pzpi-21-1-boichenko-matvii-task4
-          ls
           tsc && vite build
 
       - name: List build directory contents
         run: |
-          ls -la Task4/apz-pzpi-21-1-boichenko-matvii-task4/dist
+          ls -la /dist
       
       - name: Deploy to Azure Static Web App
         uses: Azure/static-web-apps-deploy@v1
