--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -30,12 +30,13 @@ jobs:
 
       - name: Build frontend
         run: |
+          cd Task4/apz-pzpi-21-1-boichenko-matvii-task4
           ls
-          tsc && vite build
+          npm run build
 
       - name: List build directory contents
         run: |
-          ls -la /dist
+          ls -la Task4/apz-pzpi-21-1-boichenko-matvii-task4/dist
       
       - name: Deploy to Azure Static Web App
         uses: Azure/static-web-apps-deploy@v1
